namespace Assets.Source.Game.Scripts.Characters
{
    public class AnimationMobName
    {
        public const string MOVE_ANIMATION = "Move";
        public const string ATTACK_ANIMATION = "Attack";
        public const string ADDITIONAL_ATTACK_ANIMATION = "AdditionalAttack";
        public const string SPECIAL_ATTACK_ANIMATION = "SpecialAttack";
        public const string IDLE_ANIMATION = "Idle";
    }
}